--- a/requirements.txt
+++ b/requirements.txt
@@ -96,6 +96,7 @@ traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 typing_extensions==4.13.2
 tzdata==2025.2
+ucimlrepo==0.0.7
 uri-template==1.3.0
 urllib3==2.4.0
 wcwidth==0.2.13
