--- a/requirements.txt
+++ b/requirements.txt
@@ -88,6 +88,7 @@ sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
 terminado==0.18.1
+textblob==0.19.0
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5
